--- a/css/estilo-login.css
+++ b/css/estilo-login.css
@@ -1,5 +1,5 @@
 body {
     margin: 0px;
     padding: 0px;
-    background-image: url("image/cover_back.png");
+    background-image: url("../img/cover_back.png");
 }
