--- a/css/estilo-login.css
+++ b/css/estilo-login.css
@@ -3,3 +3,15 @@ body {
     padding: 0px;
     background-image: url("../img/cover_back.png");
 }
+
+.login-box {
+    width: 320px;
+    height: 420px;
+    background: #000;
+    color: fuchsia;
+    top: 50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%, -50%);
+    box-sizing: border-box;
+}
