--- a/css/estilo-login.css
+++ b/css/estilo-login.css
@@ -1,7 +1,7 @@
 body {
     margin: 0px;
     padding: 0px;
-    background-image: url("../img/cover_back.png");
+    background-color: rosybrown;
 }
 
 .login-box {
