--- a/css/estilo-login.css
+++ b/css/estilo-login.css
@@ -5,6 +5,7 @@ body {
 }
 
 .login-box {
+    animation: desliz 2s;
     width: 320px;
     height: 420px;
     background: #000;
@@ -15,3 +16,4 @@ body {
     transform: translate(-50%, -50%);
     box-sizing: border-box;
 }
+
